--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <ul>
       <li>Go to the Kodi file manager.</li>
       <li>Click on "Add source"</li>
-      <li>The path for the source is <b><a href="https://a4k-openproject.github.io/">https://a4k-openproject.github.io/repo/</a></b> (Give it the name "Addons4Kodi").</li>
+      <li>The path for the source is <b><a href="https://a4k-openproject.github.io/">https://a4k-openproject.github.io/</a></b> (Give it the name "Addons4Kodi").</li>
       <li>Go to "Addons"</li>
       <li>In Addons, install an addon from zip.  When it asks for the location, select "Addons4Kodi", and install
-          <a href="https://a4k-openproject.github.io/repository.addons4kodi-1.3.zip">repository.addons4kodi-1.3.zip</a>
+          <a href="repository.addons4kodi-1.3.zip">repository.addons4kodi-1.3.zip</a>
       </li>
       <li>Go back to Addons install, but this time, select "Install from repository"</li>
       <li>Select the "Addons4Kodi Repository"</li>
